--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kube",
   "version": "1.0.0",
   "description": "My Moleculer-based microservices project",
+  "main": "./index.js",
   "scripts": {
     "dev": "moleculer-runner --repl --hot services/**/*.service.js",
     "start": "moleculer-runner",
@@ -25,7 +26,7 @@
     "moleculer-repl": "^0.7.3"
   },
   "dependencies": {
-    "ioredis":"5.3.2",
+    "ioredis": "5.3.2",
     "nats": "^2.7.1",
     "moleculer": "^0.14.26",
     "lodash": "^4.17.21",
